Bump reitit, remove unused deps, add tracing flags